deploy-chain-0/frontend-ui/deployment-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polkadotjs
spec:
  selector:
    matchLabels:
      app: polkadotjs
  replicas: 1
  template:
    metadata:
      labels:
        app: polkadotjs
    spec:
      containers:
      - name: polkadotjs
        image: edmcbee/polkadotjs:latest
        ports:
        - containerPort: 8000
          name: web
