deploy-chain-0/frontend-ui/route-fe.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: polkadotjs
spec:
  to:
    kind: Service
    name: polkadotjs
  port:
    targetPort: web
